# bayesian-prompt-compressor-

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
analysis/: p3_feature_analysis.py
data/results/: compression_suite_results.json  compression_test_results.json  llm_output_validation.json  long_prompts_compression_results.json  new_compressor_benchmark.json  optimizer_comparison.json  p3_feature_data.csv  p3_findings.json  p3_findings_adjusted.json
data/results/benchmark/: comparison.md  evaluation_report.txt  report.txt
data/test_prompts/: long_prompts_test_set.json  p3_test_set.json
data/website/: .embedding_cache.json
prompt_compress/: __init__.py  _persona.py  attention_optimiser.py  attention_priors.py  compressor.py  encoders.py  evaluators.py  information_sufficiency.py  informed_optimiser.py  optimiser.py  parser.py  result.py  semantic_compressor.py  text_compressor.py  validators.py
research/: benchmark.py  compare_optimiser.py  compare_single_prompt.py  evaluate.py  extract_p3.py  p3_feature_analysis.py  run_compression.py  semantic_entropy_comparison.py  speed.py  test_compression_suite.py  test_multiple.py
scripts/: check_cache_freshness.py  generate_summary.py  pareto_analysis.py  reclassify_other.py  tier1_prompts.json
src/: compress_prompt.py  custom_kernel.py  encoders.py  evaluators.py  optimiser.py  prompt_parser.py  real_validator.py  test_llm_output.py  text_compressor.py
tests/: test_public_api.py
website/: README.md
website/backend/: main.py
website/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
website/frontend/public/: summary.json
website/frontend/src/: App.tsx  index.css  types.ts
website/frontend/src/pages/: Benchmark.tsx  Calculator.tsx  Compare.tsx
